# Beads-Kanban-UI

./: .env.local.example  .eslintrc.json  .gitignore  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  restart.sh  tailwind.config.ts
.claude/: beads-workflow-injection.md  frontend-supervisors.txt  settings.json
.claude/agents/: architect.md  code-reviewer.md  detective.md  discovery.md  nextjs-supervisor.md  rust-supervisor.md  scout.md  scribe.md
.claude/hooks/: block-orchestrator-tools.sh  enforce-bead-for-supervisor.sh  enforce-sequential-dispatch.sh  memory-capture.sh  session-start.sh  validate-completion.sh
.github/workflows/: ci.yml  release.yml
.history/: README_20260121193918.md  README_20260121193921.md  README_20260121193933.md  README_20260121193934.md  README_20260121193944.md  README_20260121193953.md
agentform/pr-reviewer/: 00-project.af  01-variables.af  02-providers.af  03-servers.af  04-capabilities.af  05-policies.af  06-agents.af  07-workflows.af  README.md  input.example.yaml
npm/: README.md  package.json
npm/scripts/: postinstall.js
scripts/: install-hooks.sh
server/: Cargo.toml
server/src/: db.rs  main.rs
server/src/routes/: agents.rs  beads.rs  cli.rs  fs.rs  git.rs  memory.rs  mod.rs  projects.rs  watch.rs  worktree.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Beams.jsx  Galaxy.jsx  activity-timeline.tsx  add-project-dialog.tsx  agents-panel.tsx  bead-card.tsx  bead-detail.tsx  color-picker.tsx  comment-input.tsx  comment-list.tsx  dependency-badge.tsx  design-doc-dialog.tsx  (+16 more)
(+65 files in other folders)
